# PersonaTwinFactory

./: .gitignore  CENSUS_INTEGRATION.md  DOMAIN_RULES_EXPLAINED.md  EXTERNAL_DATASETS_INTEGRATION.md  INTELLIGENT_EVENT_MERGING.md  LICENSE  NETWORK_TRACEABILITY_IMPACT.md  PRIVACY_EXPLAINED.md  PROJECT_COMPLETE.md  PersonaTwin_Requirements.md  PersonaTwin_Summary.md  PyCon_Poster_Proposal.md  QUICKSTART.md  README.md  SOCIAL_NETWORKS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: __init__.py  advanced_transparency.py  basic_usage.py  census_enhanced_example.py  criminal_justice_example.py  custom_domain_example.py  healthcare_example.py  intelligent_event_merging_example.py  social_network_example.py
personatwin/: __init__.py  api.py  census.py  domains.py  event_merging.py  llm_integration.py  merging.py  models.py  noise.py  pipeline.py  privacy.py  social_network.py
personatwinfactory/: __init__.py  data_models.py  persona_twin.py  transparency.py
tests/: __init__.py  test_basic.py  test_data_models.py  test_persona_twin.py  test_transparency.py
